--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-recipe-admin-final",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
@@ -13,9 +13,11 @@
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "latest": "^0.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^3.11.0",
+    "react-query": "^3.35.0",
     "react-scripts": "5.0.0",
     "recoil": "^0.7.0",
     "web-vitals": "^0.2.4",
@@ -25,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
